--- a/src/docs/userguide/warPlugin.tex
+++ b/src/docs/userguide/warPlugin.tex
@@ -3,7 +3,7 @@
 \label{cha:the_war_plugin}
 The war plugin in its current form does not do much. Expect it to grow over time. The war plugin extends the JavaPlugin. It disables the default jar archive generation of the Java Plugin and adds a default war archive task (\texttt{\emph{myProjectName\_war}}). Here are the most important properties of the war archive task:
 \begin{center}
-	\begin{tabular}{|l|l|l|} \hline
+	\begin{tabular}{|l|l|p{7cm}|} \hline
 		\multicolumn{3}{|c|}{Convention to Property Mapping} \\ \hline
 	    \textbf{Task Property} & \textbf{Convention Property} & Meaning \\ \hline
 		libConfiguration & runtime &  Adds all the libraries associated with specified configuration to the lib folder of the war archive.\\ \hline
