--- a/src/docs/userguide/multiproject.tex
+++ b/src/docs/userguide/multiproject.tex
@@ -151,7 +151,7 @@ D- water
 \codeGradleFile[tropicalFish - ]{../../../build/distributions/exploded/samples/userguide/multiproject/tropicalWithProperties/water/tropicalFish/build.gradle}
 \codeGradleFile[water - ]{../../../build/distributions/exploded/samples/userguide/multiproject/tropicalWithProperties/water/build.gradle}
 \outputInputGradle[userguide/multiproject/tropicalWithProperties/water]{../../samples/userguideOutput/multiprojectTropicalWithProperties.out}
-In the \texttt{gradefile} of the \texttt{water} project we use \texttt{lateInitialize}. This means that the closure we are passing get evaluated \texttt{after} the build scripts of the subproject are evaluated. As the property \texttt{arctic} is set in those build scripts, we have to do it this way. You will find more on this topic in section \ref{sec:dependencies_which_dependencies}
+In the \texttt{gradefile} of the \texttt{water} project we use an \texttt{afterEvaluateListener}. This means that the closure we are passing get evaluated \texttt{after} the build scripts of the subproject are evaluated. As the property \texttt{arctic} is set in those build scripts, we have to do it this way. You will find more on this topic in section \ref{sec:dependencies_which_dependencies}
 % subsubsection filtering_by_properties (end)
 % subsection project_filtering (end)
 % section subproject_configuration (end)
