--- a/src/docs/userguide/warPlugin.tex
+++ b/src/docs/userguide/warPlugin.tex
@@ -1,23 +1,22 @@
 %!TEX root = master.tex
 \chapter{The War Plugin} % (fold)
 \label{cha:the_war_plugin}
-The war plugin in its current form does not do much. Expect it to grow over time. The war plugin extends the JavaPlugin. It disables the default jar archive generation of the Java Plugin and adds a default war archive task (\texttt{\emph{myProjectName\_war}}). Here are the most important properties of the war archive task:
-\begin{center}
-	\begin{tabular}{|l|l|p{7cm}|} \hline
-		\multicolumn{3}{|c|}{Convention to Property Mapping} \\ \hline
-	    \textbf{Task Property} & \textbf{Convention Property} & Meaning \\ \hline
-		libConfiguration & runtime &  Adds all the libraries associated with specified configuration to the lib folder of the war archive.\\ \hline
-		additionalLibFileSets & [] & A list of \texttt{FileSet} container, specifying files to be put in the lib folder of the war archive. \\ \hline
-		classesFileSets & [new FileSet('build/classes')] & A list of \texttt{FileSet} container, specifying files to be put in the classes folder of the war archive.\\ \hline
-		webInfFileSets & [new FileSet('src/main/webapp')] & A list of \texttt{FileSet} container, specifying files to be put in the WEB-INF folder of the war archive.\\ \hline
-		webXml & null & A file object pointing to an arbitrary file, which is copied to WEB-INF/web.xml location in the war archive. If this property is set, it has precedence over a web.xml file located in webInfFileSets\\ \hline
-	\end{tabular} 
-\end{center}
-Have also a look at \href{\API tasks/bundling/War.html}{org.gradle.api.tasks.bundling.War}.
+The war plugin extends the JavaPlugin. It disables the default jar archive generation of the Java Plugin and adds a default war archive task. Have also a look at \href{\API tasks/bundling/War.html}{org.gradle.api.tasks.bundling.War}.
+\\
+\section{Default Settings} % (fold)
+\label{sec:default_settings}
+The default behavior of the War plugin is to copy the content of \texttt{src/main/webapp} to the root of the archive. Your \texttt{webapp} folder may of course contain a \texttt{WEB-INF} sub-directory, which again may contain a \texttt{web.xml} file. Your compiled classes are compiled to \texttt{WEB-INF/classes}. All the dependencies of the \texttt{runtime}\footnote{The \texttt{runtime} configuration extends the \texttt{compile} configuration.} configuration are copied to \texttt{WEB-INF/lib}. The War plugin add two new dependency configurations: \texttt{providedCompile} and \texttt{providedRuntime}. Those new configurations have the same scope as the respective \texttt{compile} and \texttt{runtime} configurations. Except that they are not added to the war-archive. It is important to note that those \texttt{provided} configurations work transitively. Let's say you add \texttt{commons-httpclient:commons-httpclient:3.0} to any of the provided configurations. This dependency has a dependency on \texttt{commons-codec}. This means neither \texttt{httpclient} nor \texttt{commons-codec} is added to your war, even if \texttt{commons-code} were an explicit dependency of your \texttt{compile} configuration. If you don't want this transitive behavior, simply declare your \texttt{provided} dependencies like \texttt{commons-httpclient:commons-httpclient:3.0@jar}.
+% section default_settings (end)
+\section{Customizing} % (fold)
+\label{sec:customizing}
+Here an example with the most important customization options:
+\codeInput{../../samples/web-project/build.gradle}
+Of course one can configure the different file-sets with a closure to define excludes and includes.
 \\
 
 \noindent If you want to enable the generation of the default jar archive additional to the war archive just type:
 \begin{Verbatim}
-myProjectName_jar.enabled = true
+archive_jar.enabled = true
 \end{Verbatim}
+% section customizing (end)
 % chapter the_war_plugin (end)
