--- a/src/docs/userguide/commandLine.tex
+++ b/src/docs/userguide/commandLine.tex
@@ -4,26 +4,30 @@
 
 \begin{tabular}{l|l|l}
 \textbf{Option}(-) & \textbf{Long Option}(--) & \textbf{Meaning}\\ \hline
-D & prop             & Sets system property of the JVM (e.g. -Dmyprop=myvalue).\\ 
+-?, -h  & -           & Shows this help message\\
+B & bootstrap-debug & Specify a text to be logged at the beginning (used internally by Gradle's bootstrap class.)\\
+D & systemprop       & Sets a system property of the JVM (e.g. -Dmyprop=myvalue).\\ 
 I & noImports        & Disable usage of default imports for build script files.\\
-P & projectProperty  & Set project property of the root project (e.g. -Pmyprop=myvalue).\\
-S & noJvmTermination & Don't trigger a System.exit(0) for normal termination. Use by Gradle's unit tests.\\
-b & buildfile        & Use this build file name (also for subprojects).\\
+P & projectprop  & Sets a project property of the root project (e.g. -Pmyprop=myvalue).\\
+S & - & Don't trigger a System.exit(0) for normal termination. Used internally by Gradle's unit tests.\\
+b & buildfile        & Specifies the build file name (also for subprojects). Defaults to build.gradle.\\
+c & settingsfile     & Specifies the settings file name. Defaults to settings.gradle.\\
 d & debug            & Log in debug mode (includes normal stacktrace).\\
-e & embedded         & Use an embedded build script.\\
-f & fullStacktrace   & Print out the full (very verbose) stacktrace.\\
-g & gradleUserHome   & The user gradle home dir.\\
-h & help             & Prints usage information.\\
-i & depInfo          & Log dependency management output in info mode (Default mode is error).\\
-j & depDebug         & Log dependency management output in debug mode (Default mode is error).\\
-l & pluginProperties & Use this file as the plugin properties file.\\
-n & nonRecursive     & Do not execute primary tasks of childprojects.\\
-p & projectDir       & Use this dir instead of the current dir as the project dir.\\
+e & embedded         & Specify an embedded build script.\\
+f & full-stacktrace  & Print out the full (very verbose) stacktrace for any exceptions.\\
+g & gradle-user-home & Specifies the gradle user home dir.\\
+i & ivy-quiet        & Set Ivy log level to quiet.\\
+j & ivy-debug        & Set Ivy log level to debug (very verbose).\\
+l & plugin-properties-file & Specifies the plugin properties file.\\
+p & project-dir       & Specifies the start dir for Gradle. Defaults to current dir.\\
 q & quiet            & Log erros only.\\
-s & stacktrace       & Print out the stacktrace.\\
-t & tasks            & Show list of tasks.\\
-u & noSearchUpwards  & Don't search in parent folders for a settings.gradle file.\\
+r & rebuild-cache    & Rebuild the cache of compiled build scripts.\\
+s & stacktrace       & Print out the stacktrace also for user exceptions (e.g. compile error).\\
+t & tasks            & Show list of all available tasks and there dependencies.\\
+u & no-search-upwards  & Don't search in parent folders for a settings.gradle file.\\
 v & version          & Prints version info.\\
+x & cache-off        & No caching of compiled build scripts.\\
+
 \end{tabular}
 \\
  
