--- a/src/docs/userguide/thisAndThat.tex
+++ b/src/docs/userguide/thisAndThat.tex
@@ -44,7 +44,7 @@ neither \texttt{q} nor \texttt{d} & Gradle and Ant will print out info log messa
 
 \begin{tabular}{|l|p{15cm}|} \hline
 Option & Meaning  \\ \hline
-neither \texttt{s} nor \texttt{f} & No stacktraces are printed to the console in case of a build error (e.g. a compile error). Only in case of internal exceptions will stacktraces be printed. If the loglevel option \texttt{d} is choosen, truncated stacktraces are always printed. \\ \hline
+neither \texttt{s} nor \texttt{f} & No stacktraces are printed to the console in case of a build error (e.g. a compile error). Only in case of internal exceptions will stacktraces be printed. If the loglevel option \texttt{d} is chosen, truncated stacktraces are always printed. \\ \hline
 \texttt{s} & Truncated stacktraces are printed. We recommend this over full stacktraces. Groovy full stacktraces are extremely verbose (Due to the underlying dynamic invocation mechanisms. Yet they usually do not contain relevant information for what has gone wrong in \emph{your} code.)  \\ \hline
 \texttt{f} & The full stacktraces are printed out. \\ \hline
 \end{tabular}
