--- a/src/docs/userguide/multiproject.tex
+++ b/src/docs/userguide/multiproject.tex
@@ -151,7 +151,7 @@ D- water
 \codeGradleFile[tropicalFish - ]{../../../build/distributions/exploded/samples/userguide/multiproject/tropicalWithProperties/water/tropicalFish/build.gradle}
 \codeGradleFile[water - ]{../../../build/distributions/exploded/samples/userguide/multiproject/tropicalWithProperties/water/build.gradle}
 \outputInputGradle[userguide/multiproject/tropicalWithProperties/water]{../../samples/userguideOutput/multiprojectTropicalWithProperties.out}
-In the \texttt{gradefile} of the \texttt{water} project we use an \texttt{afterEvaluateListener}. This means that the closure we are passing get evaluated \texttt{after} the build scripts of the subproject are evaluated. As the property \texttt{arctic} is set in those build scripts, we have to do it this way. You will find more on this topic in section \ref{sec:dependencies_which_dependencies}
+In the \texttt{gradefile} of the \texttt{water} project we use an \texttt{afterEvaluateListener}. This means that the closure we are passing gets evaluated \texttt{after} the build scripts of the subproject are evaluated. As the property \texttt{arctic} is set in those build scripts, we have to do it this way. You will find more on this topic in section \ref{sec:dependencies_which_dependencies}
 % subsubsection filtering_by_properties (end)
 % subsection project_filtering (end)
 % section subproject_configuration (end)
@@ -168,6 +168,13 @@ Here the output without the \texttt{-q} option
 \outputInputGradle[userguide/multiproject/partialTasks/water]{../../samples/userguideOutput/multiprojectPartialTasksNotQuiet.out}
 The build is executed from the \texttt{water} project. Neither \texttt{water} nor \texttt{tropicalFish} have a task with the name \texttt{distanceToIceberg}. Gradle does not care. The simple rule mentioned already above is: Execute all tasks down the hierarchy which have this name. Only complain if there is \emph{no} such task!
 % section execution_rules_for_multi_project_builds (end)
+
+\section{Running Tasks by there Absolute Path} % (fold)
+\label{sec:running_partial_build_from_the_root}
+As we have seen, you can run a multi-project build by entering any subproject dir and execute the build from there. All matching task names of the project hierarchy starting with the current dir are executed. But Gradle also offers to execute tasks by their absolute path (see also \ref{sec:project_and_task_paths}): 
+\outputInputGradle[userguide/multiproject/partialTasks/water/tropicalFish]{../../samples/userguideOutput/multiprojectAbsoluteTaskPaths.out}
+The build is executed from the \texttt{tropicalFish} project. We execute the \texttt{hello} tasks of the \texttt{water}, the \texttt{krill} and the \texttt{tropicalFish} project. The first two tasks are specified by there absolute path, the last task is executed on the name matching mechanism described above.
+% section running_partial_build_from_the_root (end)
 
 \section{Project and Task Paths} % (fold)
 \label{sec:project_and_task_paths}
